# repo-scanner

./: config.json  db.sqlite3  manage.py  pyproject.toml  txt
repo_scanner/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
scan/: apps.py  consumers.py  models.py  scanner.py  serializers.py  utils.py  views.py
scan/migrations/: 0001_initial.py
