[project]
name = "repo_scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "krathee95",email = "kartik.rathee.eee14@itbhu.ac.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "drf-yasg (>=1.21.9,<2.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "javalang (>=0.13.0,<0.14.0)",
    "esprima (>=4.0.1,<5.0.0)",
    "phply (>=1.2.6,<2.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "daphne (>=4.1.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
